[gd_scene load_steps=3 format=3 uid="uid://b2634sby3v7of"]

[ext_resource type="Script" uid="uid://b0qfa5xx6vnqx" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://cl18m0c6sbafs" path="res://Scenes/Fractured Memory BG Main2.png" id="2_7vrkn"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 1154.0
offset_bottom = 651.0
texture = ExtResource("2_7vrkn")
expand_mode = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 50.000004
offset_top = 89.0
offset_right = 173.33334
offset_bottom = -275.66663
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 25
alignment = 1

[node name="Start Button" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 5
text = "Start Game"

[node name="Options Button" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 5
text = "Options"

[node name="Quit Button" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_horizontal = 5
text = "Quit"

[connection signal="pressed" from="MenuContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuContainer/Quit Button" to="." method="_on_quit_button_pressed"]
